[package]
name = "hue2mqtt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.9"
log = "0.4"
env_logger = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio-stream = "0.1"
async-stream = "0.3"
futures-util = "0.3"
futures-core = "0.3"